fix(logo): tidy up logo size on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -305,9 +305,9 @@ box-shadow:0 2px 10px 1px rgba(0,0,0,.2);
 top: 0;
 }
 .sticky .logo a {
-width: 195px;
+/* width: 195px;
 height: 38px;
-background-size: 195px 38px;
+background-size: 195px 38px; */
 }
 
 /**
